# facebook_page_monitor

./: README.md  pyproject.toml  requirements.txt
facebook_page_monitor/: facebook_page_monitor.py
tests/: test_facebook_page_monitor.py
